; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_bt_mesh_server_start_transition.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_bt_mesh_server_start_transition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_state_transition = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@BLE_MESH_TRANS_TIMER_START = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bt_mesh_server_start_transition(%struct.bt_mesh_state_transition* %0) #0 {
  %2 = alloca %struct.bt_mesh_state_transition*, align 8
  store %struct.bt_mesh_state_transition* %0, %struct.bt_mesh_state_transition** %2, align 8
  %3 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %4 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %9 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %8, i32 0, i32 1
  %10 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %11 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = mul nsw i32 5, %12
  %14 = call i32 @K_MSEC(i32 %13)
  %15 = call i32 @k_delayed_work_submit(%struct.TYPE_2__* %9, i32 %14)
  %16 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %17 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @BLE_MESH_TRANS_TIMER_START, align 4
  %20 = call i32 @bt_mesh_atomic_set_bit(i32 %18, i32 %19)
  br label %26

21:                                               ; preds = %1
  %22 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %23 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = call i32 @k_work_submit(i32* %24)
  br label %26

26:                                               ; preds = %21, %7
  ret void
}

declare dso_local i32 @k_delayed_work_submit(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @K_MSEC(i32) #1

declare dso_local i32 @bt_mesh_atomic_set_bit(i32, i32) #1

declare dso_local i32 @k_work_submit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
